Complete pre css

--- a/frontend/aboutme.html
+++ b/frontend/aboutme.html
@@ -46,15 +46,9 @@
     <ul>
         <li>Akira</li>
         <li>Princess Bride</li>
-        <li>
-            <a target = "_blank" href="https://www.imdb.com/title/tt0118480/">
-                <img src="sg1_thumb.jpg">Stargate SG1</a>
-        </li>
-        <li>
-            <a href="https://www.imdb.com/title/tt0374455/">
-                <img src="atlantis_thumb.jpg">Stargate Atlantis</a>
-        </li>
-        <li><a href="https://www.imdb.com/title/tt1119644/">Fringe</a></li>
+        <li>Stargate SG1</li>
+        <li>Stargate Atlantis</li>
+        <li>Fringe</li>
         <li>Starwars: Rogue One</li>
         <li>Red Dwarf</li>
         <li>Crying Freeman (manga)</li>
