css added to html

--- a/frontend/aboutme.html
+++ b/frontend/aboutme.html
@@ -43,20 +43,22 @@
 
     <!-- at least 1 list -->
     <p>Movies/Shows I like in not particular order:</p>
-    <ul>
-        <li>Akira</li>
-        <li>Princess Bride</li>
-        <li>Stargate SG1</li>
-        <li>Stargate Atlantis</li>
-        <li>Fringe</li>
-        <li>Starwars: Rogue One</li>
-        <li>Red Dwarf</li>
-        <li>Crying Freeman (manga)</li>
+    <ul id="movie-list">
+        <li class="movie-item m1">Akira</li>
+        <li class="movie-item m2">Princess Bride</li>
+        <li class="movie-item m3">Stargate SG1</li>
+        <li class="movie-item m4">Stargate Atlantis</li>
+        <li class="movie-item m5">Fringe</li>
+        <li class="movie-item m6">Starwars: Rogue One</li>
+        <li class="movie-item m7">Red Dwarf</li>
+        <li class="movie-item m8">Crying Freeman (manga)</li>
     </ul>
 
     <!-- at least 1 image -->
     <p>Here is an image showing my next money making adventure:</p>
-    <img src="python.jpeg" <!-- a footer -->
+    <img id="python_img" src="python.jpeg">
+    
+    <!-- a footer -->
     <footer>
         <p>Contact details: &lt;tba&gt;</p>
     </footer>
